--- a/src/components/products/products.css
+++ b/src/components/products/products.css
@@ -1,5 +1,29 @@
 .productList {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 5px;
-  }
+    display: flex; 
+    flex-wrap: wrap; 
+    justify-content: center;
+    margin: 20px 0; 
+}
+
+h1{
+  margin-top: 40px;
+  text-align: center;
+  font-size: 24px;
+}
+.productList h1 {
+    text-align: center;
+    font-size: 2rem; 
+    margin-bottom: 20px; 
+    color: #333; 
+}
+
+.product {
+    flex: 1 1 200px; 
+    margin: 10px; 
+    max-width: 300px; 
+    transition: transform 0.2s;
+}
+
+.product:hover {
+    transform: scale(1.02); 
+}
