--- a/src/components/products/product.css
+++ b/src/components/products/product.css
@@ -1,36 +1,65 @@
-.product {
+
+.product-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 16px;
   margin: 16px;
   text-align: center;
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s;
+  transition: transform 0.2s, box-shadow 0.2s;
+  width: 250px;
+  height: 350px; 
+  position: relative; 
 }
 
-.product:hover {
+.product-container:hover {
   transform: scale(1.05);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-.product h2 {
-  font-size: 1.5rem;
+.icon-container {
+  position: absolute; 
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  width: 24px; 
+  height: 24px; 
+}
+
+.icon-container img {
+  width: 100%;
+  height: 100%;
+}
+
+.product-image {
+  width: 100%;
+  height: 150px; 
+  overflow: hidden;
+  border-radius: 8px; 
+}
+
+.product-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.product-name {
+  font-size: 16px;
   margin: 12px 0;
   color: #333;
 }
 
-.product img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 4px;
-}
-
-.product p {
+.product-price {
   font-size: 1.2rem;
   margin: 8px 0;
   color: #e67e22;
 }
 
-.product button {
+.add-to-cart-button {
   background-color: #e67e22;
   color: #fff;
   border: none;
@@ -38,9 +67,13 @@
   padding: 10px 16px;
   font-size: 1rem;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: background-color 0.3s, transform 0.2s;
 }
 
-.product button:hover {
-  background-color: #e67e22;
+.add-to-cart-button:hover {
+  background-color: #d95e21; 
+  transform: scale(1.05);
 }
+
+.add-to-cart-button:focus {
+  outline: 2px solid #f39c12;}
